# my-ereader

./: .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  README.md  index.html  my ereader
build-android-arm64/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
build-android-arm64/.qt/: .qmlls.build.ini  QtDeploySupport.cmake  QtDeployTargets.cmake
build-android-arm64/.rcc/qmlcache/: all_aotstats.aotstatslist
build-android-arm64/src/app/: android-ereader-deployment-settings.json  cmake_install.cmake  ereader  ereader_qmltyperegistrations.cpp
build-android-arm64/src/app/.qt/: ereader_qml.cmake  ereader_res.cmake
build-android-arm64/src/app/.qt/qml_imports/: ereader_conf.cmake  ereader_conf.rsp
build-android-arm64/src/app/.qt/rcc/: djvutools.qrc  ereader_raw_qml_0.qrc  qmake_Ereader.qrc  qrc_djvutools.cpp  qrc_ereader_raw_qml_0.cpp  qrc_qmake_Ereader.cpp
build-android-arm64/src/app/.rcc/qmlcache/: ereader_qml_loader_file_list.rsp  ereader_qmlcache_loader.cpp  module_ereader.aotstatslist
build-android-arm64/src/app/.rcc/qmlcache/ereader_qml/: MainAndroid_qml.cpp  MainAndroid_qml.cpp.aotstats  Main_qml.cpp  Main_qml.cpp.aotstats  Theme_qml.cpp  Theme_qml.cpp.aotstats
build-android-arm64/src/app/.rcc/qmllint/: ereader.rsp  ereader_json.rsp  ereader_module.rsp
build-android-arm64/src/app/Ereader/: ereader_qml_module_dir_map.qrc  qmldir
build-android-arm64/src/app/Ereader/qml/: Main.qml  MainAndroid.qml
build-android-arm64/src/app/android-build/: AndroidManifest.xml  ereader.d  gradle.properties  local.properties
build-android-arm64/src/app/android-build/assets/: android_rcc_bundle.rcc
build-android-arm64/src/app/android-build/res/values/: libs.xml
build-android-arm64/src/app/ereader_autogen/: deps  moc_predefs.h
build-android-arm64/src/app/qmltypes/: ereader_foreign_types.txt
build-android-arm64/src/core/: cmake_install.cmake
build-android-arm64/src/core/core_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
build-android-arm64/src/core/core_autogen/6YEA5652QU/: moc_AnnotationModel.cpp  moc_AnnotationModel.cpp.d  moc_DbWorker.cpp  moc_DbWorker.cpp.d  moc_LibraryModel.cpp  moc_LibraryModel.cpp.d  moc_LicenseManager.cpp  moc_LicenseManager.cpp.d  moc_ReaderController.cpp  moc_ReaderController.cpp.d  moc_SettingsManager.cpp  moc_SettingsManager.cpp.d  moc_UpdateManager.cpp  moc_UpdateManager.cpp.d  moc_VaultController.cpp  moc_VaultController.cpp.d
build-android-arm64/src/core/core_autogen/include/: KeychainStore.moc.d
build-android-arm64/src/crypto/: cmake_install.cmake
build-android-arm64/src/crypto/crypto_autogen/: deps  moc_predefs.h
build-android-arm64/src/formats/: cmake_install.cmake
build-android-arm64/src/formats/formats_autogen/: deps  moc_predefs.h
build-android-arm64/src/sync/: cmake_install.cmake
build-android-arm64/src/sync/sync_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
build-android-arm64/src/sync/sync_autogen/6YEA5652QU/: moc_SyncManager.cpp  moc_SyncManager.cpp.d
build-android-arm64/src/tts/: cmake_install.cmake
build-android-arm64/src/tts/tts_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
build-android-arm64/src/tts/tts_autogen/6YEA5652QU/: moc_TtsController.cpp  moc_TtsController.cpp.d
cmake/: LibarchiveBundled.cmake  PopplerBundled.cmake
config/: azw.ini  azw3.ini  azw4.ini  cbr.ini  cbz.ini  djvu.ini  epub.ini  fb2.ini  mobi.ini  pdf.ini  settings.ini  sync.ini  txt.ini
data/: library.vault
docs/: ANDROID.md  ARCHITECTURE.md  CRYPTO.md  POPPLER.md  RELEASE.md  ROADMAP.md  SECURITY.md  SETTINGS.md  THIRD_PARTY.md  UPDATES.md
flatpak/: Ereader.qmldir  com.bigrangatech.MyEreader.desktop  com.bigrangatech.MyEreader.metainfo.xml  com.bigrangatech.MyEreader.yaml  dotconf-autogen.sh  dotconf.post-install.sh
scripts/: build_djvulibre.sh  build_flatpak.sh  build_libarchive.sh  build_poppler.sh  export_flatpak_bundle.sh  install_fedora_kde.sh  package_licenses.sh  package_linux.sh  publish_flatpak_pages.sh  publish_flatpak_repo.sh  update.sh  vendor_update.sh
scripts/android/: build_android_deps.sh  package_apk.sh  patch_deployment_json.py
src/app/: CMakeLists.txt  main.cpp
src/app/qml/: Main.qml  MainAndroid.qml  Theme.qml
src/core/: AnnotationModel.cpp  AsyncUtil.cpp  CMakeLists.txt  DbWorker.cpp  KeychainStore.cpp  LibraryModel.cpp  LicenseManager.cpp  Logger.cpp  ReaderController.cpp  SettingsManager.cpp  UpdateManager.cpp  VaultController.cpp
src/core/include/: AnnotationModel.h  AppInfo.h  AppPaths.h  AsyncUtil.h  DbWorker.h  KeychainStore.h  LibraryItem.h  LibraryModel.h  LicenseManager.h  Logger.h  ReaderController.h  SQLiteUtil.h  SettingsManager.h  UpdateManager.h  VaultController.h
src/crypto/: CMakeLists.txt  CryptoBackendMonocypher.cpp  CryptoBackendNull.cpp  CryptoBackendSodium.cpp  CryptoVault.cpp
src/crypto/include/: CryptoBackend.h  CryptoVault.h
src/formats/: CMakeLists.txt  CbzProvider.cpp  CbzProvider.h  DjvuProvider.cpp  DjvuProvider.h  EpubProvider.cpp  EpubProvider.h  Fb2Provider.cpp  Fb2Provider.h  FormatRegistry.cpp  MobiProvider.cpp  MobiProvider.h  PdfProvider.cpp  PdfProvider.h  TxtProvider.cpp  TxtProvider.h
src/formats/include/: FormatDocument.h  FormatProvider.h  FormatRegistry.h
src/sync/: CMakeLists.txt  SyncManager.cpp
src/sync/include/: SyncManager.h
src/tts/: CMakeLists.txt  TtsController.cpp
src/tts/include/: TtsController.h
testbooks/: The Fires Of Heaven -- Jordan, Robert -- The Wheel Of Time 5, 0 -- 9784e9ba48ca98bcc8f478792b6fc637 -- Anna’s Archive.azw
